# BOTC-Fast-Grimoire

./: .gitignore  :w  Cargo.toml  README.md  REQUIREMENTS.md  Trunk.toml  bugs.md  index.html  package-lock.json  requirements.md  tailwind.config.js
macros/src/: lib.rs
src/: engine.rs  game.rs  initialization.rs  main.rs  old_main.rs  requirements.md  scripts.rs  setup.rs  template.rs
src/engine/: change_request.rs  day.rs  interface.rs  night.rs  player.rs  setup.rs  state.rs
src/engine/player/: roles.rs
src/engine/player/roles/: demons.rs  minions.rs  outsiders.rs  townsfolk.rs
src/engine/player/roles/role_macros/: Cargo.toml
src/engine/player/roles/role_macros/src/: lib.rs
src/engine/state/: log.rs  state_machine.rs  status_effects.rs
src/game/: interface.rs  status_effects.rs
