[package]
name = "botc"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.3.3", features = ["wasm_js"] }
leptos = { version = "0.8.2", features = ["csr"] }
rand = "0.9.1"
reactive_stores = "0.2.2"
serde = "1.0.218"
serde_derive = "1.0.218"
serde_json = "1.0.140"
macros = { path = "macros" }
enum_dispatch = "0.3.13"
